fixed spacing in between stories

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -183,7 +183,7 @@ p.trending-on-hard-text {
 .remaining-stories-divider {
     display: flex;
     flex-direction: row;
-    height: 170px;
+    height: 100%;
     justify-content: space-between;
     overflow: hidden;
     padding-bottom: 20px;
@@ -191,12 +191,13 @@ p.trending-on-hard-text {
 }
 
 #remaining-stories-left {
-    height: 100%;
+    max-height: 100%;
     width: 65%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: flex-start;
+    padding-bottom: 5%;
 }
 
 .remaining-stories-right {
