--- a/react-app/src/components/Navigation/navigation.css
+++ b/react-app/src/components/Navigation/navigation.css
@@ -23,7 +23,7 @@
 }
 
 .navBar-left {
-    margin-left: 8vw;
+    margin-left: 14vw;
 }
 
 .navBar-left-inner {
